# High-Frequency-Trading-Ecosystem

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  config.env  requirements.txt  results.txt
docs/: agent-handoff.md  architecture.md  benchmark-setup.md  benchmarks.md  bottlenecks.md  cpp-prep-for-python-monitoring.md  dependency.md  implementation-plan.md  known-issues.md  review-findings.md  technical-deep-dive.md  telemetry.md  v1.0.0-defects.md
hft-trading-firm/: CMakeLists.txt
hft-trading-firm/include/models/: NormalizedModels.h
hft-trading-firm/include/network/: IExchangeConnector.h
hft-trading-firm/src/: main.cpp
hft-trading-firm/src/data/: book_builder.h
hft-trading-firm/src/execution/: execution_engine.h
hft-trading-firm/src/network/: CryptoPaperConnector.h  LocalExchangeConnector.h  messages.h  tcp_client.h  test_send.cpp  udp_listener.h
hft-trading-firm/src/risk/: risk_manager.h
hft-trading-firm/src/signal/: signal_engine.h
hft-trading-firm/src/strategy/: market_maker.h
hft-trading-firm/src/utils/: spsc_queue.h
hft_engine/: .gitignore  CMakeLists.txt
hft_engine/src/app/: exchange.cpp
hft_engine/src/auxiliary/: order_manager.h
hft_engine/src/core/: lock_free_queue.h  memory_pool.h  stats_region.h  timer.h
hft_engine/src/gateway/: risk_engine.h  session_manager.h  tcp_server.h
hft_engine/src/market_data/: publisher.h
hft_engine/src/matching/: engine.cpp  engine.h  order.h  orderbook.h
hft_engine/src/protocol/: messages.h
hft_engine/src/tools/: generate_pcap.cpp  liquidity.cpp  market_maker.cpp  replay.cpp  tester.cpp
hft_engine/tests/: CMakeLists.txt  gateway_fixture.h  main.cpp  test_framing.cpp  test_identity.cpp  test_orderbook.cpp  test_pool.cpp  test_queue.cpp  test_symbol.cpp  test_wire.cpp  tests.h
monitoring/: __init__.py  clock.py  config.py  health.py  models.py  orchestrator.py  run_tests.py  wire.py
monitoring/core/: __init__.py  metrics.py  orderbook.py
monitoring/feeds/: __init__.py  audit_reader.py  multicast.py  stats_reader.py
monitoring/tui/: __init__.py  app.py
scripts/: decode_audit.py  measure_throughput.py  plot.py  run_sharding.sh  setup_isolcpus.sh
